Change example buttons prop

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       address="0x1f2b10EbC8783d2851B96CdA086E6e6a021E6b4B"
       text="Donate"
       amount="5"
-      amount-currency="USD"
+      amount-currency="EUR"
       fiat-first="true"
       success-text="Success!"
     ></div>
