Edit button class name

--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,15 @@
   <body>
 
     <div
-      class="metamask-donate"
+      class="metamask-button"
       address="0x2b7dF997E54CD20a9fFa5AC460D0A9FBD5fB0c09"
       amount="0.005"
+      success-callback="onSuccess"
+      error-callback="onError"
     ></div>
 
     <div
-      class="metamask-donate"
+      class="metamask-button"
       address="0x2b7dF997E54CD20a9fFa5AC460D0A9FBD5fB0c09"
       amount="0.005"
       fiat-currency="USD"
@@ -40,7 +42,7 @@
     ></div>
 
     <div
-      class="metamask-donate"
+      class="metamask-button"
       address="0x1f2b10EbC8783d2851B96CdA086E6e6a021E6b4B"
       text="Donate"
       amount="5"
@@ -50,7 +52,7 @@
     ></div>
 
     <div
-      class="metamask-donate"
+      class="metamask-button"
       address="0x1f2b10EbC8783d2851B96CdA086E6e6a021E6b4B"
       text="Pay"
       amount="50"
